# langchain

./: main.py  pyproject.toml  requirements.txt  typedict.py
generativeai/: 1-langchainintro.ipynb  2-tools.ipynb  3-langchain_agent.ipynb  4-agents_multipletools.ipynb  5-messages.ipynb  6-structure-output.ipynb  7-memory.ipynb  8-middleware.ipynb  chains.ipynb  json_output.ipynb  jsonoutput.ipynb  messages.ipynb  output-parser.ipynb  pydantic.ipynb  review.json  structure-output-parser.ipynb  structuredoutput.ipynb
