[project]
name = "aiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langchain-xai>=1.2.1",
    "langgraph>=1.0.5",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
]
